Minor fixes to body element, attempt fix for TTS on firefox

--- a/app/components/NavMenu/NavMenu.module.css
+++ b/app/components/NavMenu/NavMenu.module.css
@@ -6,6 +6,7 @@
     padding: 1em;
     background-color: var(--background-secondary);
     border-bottom: solid 1px #696868;
+    width: 100%;
 }
 
 .navMenuContainer {
