--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  align-items: center;
 }
 
 body * + * {
@@ -43,6 +44,7 @@ body * + * {
   max-width: var(--max-width);
   margin: 0;
   flex: 1;
+  width: 100%;
 }
 
 .loading {
